--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -147,7 +147,7 @@ Changes since 1.3.4-test2
 - Fixed illegal file open mode for VS 2008 runtime in trackgen (Bernhard).
 - Refactored macros in trackgen to functions to be able to debug properly and to form the
   base for code/feature improvment (Bernhard).
-- Run track/elevation.cpp of trackgen through astyle (Bernhard).
+- Run track/elevation/object.cpp of trackgen through astyle (Bernhard).
 - Fixed error in trackgen which generated wrong faces inside of the pit building (Bernhard).
 - Fixed error in trackgen which caused wrong normals on "pit caps" (the beginning/end
   of the building) if the pit is on the right side of the track (left was ok) (Bernhard).
@@ -160,8 +160,7 @@ Changes since 1.3.4-test2
 - Fixed a crash bug in trackgen, related with terrain generation (Bernhard).
 - Fixed a bug in texture handling in trackgen which caused texture misplacement and
   spawning of new groups (Bernhard).
-
-- TODO: Fix one sided objects inserted with object map, they are converted to two sided.
+- Trackgen does not anymore turn one sided objects into two sided ones (Bernhard).
 
 
 Changes since 1.3.4-test1
@@ -267,8 +266,6 @@ Later:
   have a look into that (otherwise the border is not taken as color around the
   pit door, pits are quite dark around the logo).
 - improve tools (accc, trackgen, etc, these are way too touchy).
-- make trackgen generate two sides for barriers and use just one sided
-  polygons (better diffuse lighting).
 - fix sound in split screen multiplayer. [in progress] (ask Christos).
 - Ongoing: Replace some defines with "static const" to be able to see the
   symbol name when debugging.
@@ -297,8 +294,6 @@ TODO LATER
 - Add validation for the case no driver selected, do not exit to
   console.
 - Networking (2.0).
-- Rework the whole AC file loaders and state management (most of the remaining
-  memory leaks).
 - SMP simulaton core (for myself).
 - Replays.
 - Setup editor (add a function to the robot interface to ask the robot
