--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -168,6 +168,12 @@ Changes since 1.3.4-test2
   but it worked on Windows), now building alpine-2 from ac files works as well on Linux
   (Bernhard).
 - Removed unused 3D Studio Max loader code from accc (Bernhard).
+- Fixed forza.ac texture names and broken objects, as preparation for fixing the
+  shadow map (Bernhard).
+- Trackgen can now generate a raceline model, which can then be combined with accc.
+  Define the attstr name="raceline name" for your main track surfaces, then run e.g.
+  trackgen -c road -n spring -r ("-r" for raceline), the review/edit the raceline file,
+  then combine it with accc (Bernhard).
 
 
 Changes since 1.3.4-test1
@@ -194,7 +200,6 @@ Changes since 1.3.4-test1
 - Fixed remaining tiny memory leaks regarding GfTime2Str (Bernhard).
 - Disabled some xml caching to reduce memory footprint (Bernhard).
 - Fixed more remaining leaked handles (Bernhard).
-
 
 
 Changes since 1.3.3
@@ -232,6 +237,10 @@ TODO for 1.3.4
 - API to change setup during the practice mode.
 - Timed races (e.g. 24h).
 
+fix forza shadow map
+
+
+
 
 TODO for 1.4.0
 --------------
@@ -250,10 +259,11 @@ TODO for 1.4.0
 
 TODO for Compliance
 -------------------
-155-DTM -> replace with car8-trb1
+155-DTM -> replace with car10-trb1
 acura -> replace with car9-trb1
 mc-larenf1 -> replace with car10-trb1
 p406 -> replace with car1-trb4
+rework buggy, baja bug
 
 
 
@@ -262,8 +272,6 @@ Later:
 - Mixed axis controller (under linux some analouge buttons generate a button and axis
   event, this is a problem for detection/calibration with the current workflow, e.g.
   ps3 controller buttons l2/r2)
-- When car is moving sideways, the engine sound source seems shifted to the
-  side under OpenAL (2.0).
 - Ongoing for every release: rework free car models (several holes, no
   emmissive color of lod (model becomes dark at a certain distance), single
   sided, add cockpit, lods).
@@ -272,7 +280,6 @@ Later:
 - Texture clamp to edge needs explicit setting in nvidia driver tab in windows,
   have a look into that (otherwise the border is not taken as color around the
   pit door, pits are quite dark around the logo).
-- improve tools (accc, trackgen, etc, these are way too touchy).
 - fix sound in split screen multiplayer. [in progress] (ask Christos).
 - Ongoing: Replace some defines with "static const" to be able to see the
   symbol name when debugging.
