--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -174,6 +174,8 @@ Changes since 1.3.4-test2
   Define the attstr name="raceline name" for your main track surfaces, then run e.g.
   trackgen -c road -n spring -r ("-r" for raceline), the review/edit the raceline file,
   then combine it with accc (Bernhard).
+- Added some control parameters for raceline generation: attnum "raceline ext",
+  "raceline int" and "raceline widthscale" (Bernhard).
 
 
 Changes since 1.3.4-test1
@@ -227,17 +229,17 @@ Changes since 1.3.3
 - Got rid of more gcc 4.6 warnings, just 2 left (Bernhard).
 
 
-
 TODO for 1.3.4
 --------------
+- fix forza shadow map
+
+
+TODO for 1.3.5
+--------------
 - Training session with adjustable setup (trb)
-- Bugtracking
-- check for sprintf/fscanf/strcpy/strndup, etc (ongoing)
-  (ensure 0 termination of strings -> introduce string class?)
 - API to change setup during the practice mode.
 - Timed races (e.g. 24h).
 
-fix forza shadow map
 
 
 
