--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -176,6 +176,7 @@ Changes since 1.3.4-test2
   then combine it with accc (Bernhard).
 - Added some control parameters for raceline generation: attnum "raceline ext",
   "raceline int" and "raceline widthscale" (Bernhard).
+- Added raceline to g-track-1 and michigan (Bernhard).
 
 
 Changes since 1.3.4-test1
