--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -177,6 +177,7 @@ Changes since 1.3.4-test2
 - Added some control parameters for raceline generation: attnum "raceline ext",
   "raceline int" and "raceline widthscale" (Bernhard).
 - Added raceline to g-track-1 and michigan (Bernhard).
+- Fixed various z-fighting (broken 3d model) on Brondehach track (Bernhard).
 
 
 Changes since 1.3.4-test1
