--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -178,6 +178,9 @@ Changes since 1.3.4-test2
   "raceline int" and "raceline widthscale" (Bernhard).
 - Added raceline to g-track-1 and michigan (Bernhard).
 - Fixed various z-fighting (broken 3d model) on Brondehach track (Bernhard).
+- Added raceline to ruudskogen (Bernhard).
+- Adjusted lighting of corkscrew and brondehach (Bernhard).
+- Did workflow related fixes on alpine-1, added raceline (Bernhard).
 
 
 Changes since 1.3.4-test1
@@ -204,8 +207,6 @@ Changes since 1.3.4-test1
 - Fixed remaining tiny memory leaks regarding GfTime2Str (Bernhard).
 - Disabled some xml caching to reduce memory footprint (Bernhard).
 - Fixed more remaining leaked handles (Bernhard).
-- Added raceline to ruudskogen (Bernhard).
-- adjusted lighting of corkscrew and brondehach (Bernhard).
 
 
 Changes since 1.3.3
