--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -183,6 +183,9 @@ Changes since 1.3.4-test2
 - Did workflow related fixes on alpine-1, added raceline (Bernhard).
 - Added raceline to ole-road-1, removed generated/outdated files (Bernhard).
 - Added raceline to street-1 (Bernhard).
+- Added raceline to spring (Bernhard).
+- Added raceline to g-track-3, minor adjustments (Bernhard).
+- Added raceline to g-track-2, minor adjustments (Bernhard).
 
 
 Changes since 1.3.4-test1
