--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -202,7 +202,7 @@ Changes since 1.3.4-test2
 - Fixed surface types in brondehach (SURF 0x0 to 0x10, on 0X0 is transformed to 0x24
   by accc, so accc takes double sided surfaces and hence some z-fighting might happen
   then. Do not use flat shaded surfaces in TORCS, they are not supported) (Bernhard).
-
+- Fixed framerate dependency of flying cam (Bernhard).
 
 
 Changes since 1.3.4-test1
