--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -207,10 +207,14 @@ Changes since 1.3.4-test2
   implications when regenerating existing tracks and "seamlessness" (e.g. g-track-1
   right side) (Bernhard).
 - Fixed wrong state comparision in trackgen (could generate missing/broken/misplaced end
-  caps on wall or curbs) (Bernhard).
+  caps on walls or curbs) (Bernhard).
 - Fixed curbs with height 0 generating non planar surfaces in trackgen (Bernhard).
 - Fixed ssggraph exiting on unknown verbs, now just a warning is emitted (Bernhard).
 - Fixed more ulSetError string passing (Bernhard).
+- Totally reworked e-track-3 (Bernhard).
+- Fixed wrong meshing in trackgen when border changes but side surface stays the same
+  (Bernhard).
+
 
 
 Changes since 1.3.4-test1
@@ -266,7 +270,7 @@ Changes since 1.3.3
 
 TODO for 1.3.4
 --------------
-- fix forza shadow map
+- Mostly done, sitting there waiting to escape;-)
 
 
 TODO for 1.3.5
@@ -274,11 +278,7 @@ TODO for 1.3.5
 - Training session with adjustable setup (trb)
 - API to change setup during the practice mode.
 - Timed races (e.g. 24h).
-
-Decide about plib (not maintained anymore?) -> integration?
-Refactor trackgen (left/right -> half the code, maybe more)
-
-
+- Remove invalid geometry from tracks 
 
 
 TODO for 1.4.0
@@ -295,6 +295,12 @@ TODO for 1.4.0
   drivers (instead of static 10).
 - Pace car and trucks to remove wrecks (remove "virtual" crane).
 
+Decide about plib (not maintained anymore?) -> integration?
+Refactor trackgen (left/right -> half the code, maybe more)
+
+- track4.cpp, line 218, borderHeight[side] does not carry over the previous state.
+Decide what to do (just assigning it changes the semantics of exisitng tracks if
+we are unlucky, either test/fix all or new track version).
 
 TODO for Compliance
 -------------------
