--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -250,6 +250,9 @@ Changes since 1.3.4-test2
 - Added math.h includes in TORCS math headers for gcc 4.7 (Bernhard).
 - Totally reworked Dirt-2 track (Bernhard).
 - Added stripe.exe to the Windows installer with permission from Steven Skiena (Bernhard).
+- Updated installer and Windows readme, added links to TORCS menu (online trackgen,
+  youtube videos) (Bernhard).
+- Added driver camera definition for car2/6/7-trb1 (Bernhard).
 
 
 Changes since 1.3.4-test1
@@ -307,7 +310,7 @@ Changes since 1.3.3
 --------------
 
 
-TODO for 1.3.5
+TODO for 1.3.5/6
 --------------
 - Training session with adjustable setup (trb)
 - Setup change during the practice mode.
