--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -177,7 +177,8 @@ Changes since 1.3.4
   by Jasper van de Ven (Jasper, Bernhard).
 - Updated robotgen script for recent changes, patch provided by Jasper van de Ven
   (Jasper, Bernhard).
-- Updated installdb.php to allow longer session keys (Bernhard).
+- TRB: Updated installdb.php to allow longer session keys (Bernhard).
+- TRB: Added best qualifying lap times per event in track view (Bernhard). 
 
 
 11. TODO/Notes
