--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -178,7 +178,8 @@ Changes since 1.3.4
 - Updated robotgen script for recent changes, patch provided by Jasper van de Ven
   (Jasper, Bernhard).
 - TRB: Updated installdb.php to allow longer session keys (Bernhard).
-- TRB: Added best qualifying lap times per event in track view (Bernhard). 
+- TRB: Added best qualifying lap times per event in track view (Bernhard).
+- TRB: Adjusted styling in templates towards themeing (Bernhard).
 
 
 11. TODO/Notes
