--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -181,6 +181,7 @@ Changes since 1.3.4
 - TRB: Added best qualifying lap times per event in track view (Bernhard).
 - TRB: Adjusted styling in templates towards themeing (Bernhard).
 - TRB: Added public download of robots when event is done (Bernhard).
+- TRB: Added TORCS versioning for races (Bernhard).
 
 
 11. TODO/Notes
