--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -182,6 +182,7 @@ Changes since 1.3.4
 - TRB: Adjusted styling in templates towards themeing (Bernhard).
 - TRB: Added public download of robots when event is done (Bernhard).
 - TRB: Added TORCS versioning for races (Bernhard).
+- TRB: Added installation instructions (Bernhard).
 
 
 11. TODO/Notes
