--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -215,6 +215,8 @@ Changes since 1.3.4
   (Jon, Bernhard).
 - Added build notes for VS2005 Express, VS2008 Express, VS2010, VS2012 provided by Eric,
   Wolf-Dieter, Stacey and Steve (Eric, Wolf-Dieter, Stacey, Steve, Bernhard).
+- Fixed accc allocating too small array for texture coordinates in pathologic cases (e.g.
+  just 1 or 2 surfaces per object, or all surfaces specially mapped) (Bernhard).
 
 
 11. TODO/Notes
